# wealth

./: README.md  docker-compose.yaml
server/: .gitignore  Dockerfile  pyproject.toml
server/output/: ANDER BALÁZS-50-58.json  Arató Gergely László-0-8.json  BALLA GYÖRGY-59-67.json  BALLA MIHÁLY-68-76.json  BARCZA ATTILA-169-179.json  BARTOS MÓNIKA ÉVA-141-150.json  BECSÓ ZSOLT-93-105.json  BEDŐ DÁVID-198-206.json  BERKI SÁNDOR-207-215.json  BODÓ SÁNDOR-151-159.json  Bakos Bernadett-189-197.json  Balassa Péter Sándor-225-235.json  Barkóczi Balázs-216-224.json  Bencsik János-106-120.json  Bencze János-236-245.json  BÁNKI ERIK-77-92.json  BÁNYAI GÁBOR-121-131.json  BÓNA ZOLTÁN-246-254.json  CSERESNYÉS PÉTER-266-274.json  CSERESNYÉS PÉTER-275-283.json  CSÖBÖR KATALIN-300-309.json  CZERVÁN GYÖRGY-255-265.json  CZUNYINÉ DR BERTALAN JUDIT-284-299.json  Csárdi Antal-310-318.json  DANKÓ BÉLA-337-355.json  DEMETER ZOLTÁN-319-327.json  DR KOVÁCS JÓZSEF-927-937.json  DR KÁLLAI MÁRIA-968-976.json  DR MOLNÁR ZSOLT-1204-1214.json  DR PESTI IMRE-1468-1477.json  DR SEMJÉN ZSOLT-1761-1771.json  DR SZŰCS LAJOS-1586-1594.json  DR. DEMETER ANDRÁS-413-422.json  DR. DEMETER ANDRÁS-423-432.json  DR. DÁVID FERENC-403-412.json  DR. FAZEKAS SÁNDOR-472-483.json  DR. GURMAI ZITA-552-563.json  DR. HENDE CSABA-691-700.json  DR. HÖRCSIK RICHÁRD-812-820.json  DR. KISS JÁNOS-1006-1015.json  (+167 more)
server/wealth/: gpt_client.py  model.py  pdf_processor.py  splitter.py  wealth.schema.json  wealth_json.py
server/wealth/api/: main.py
server/wealth/database/: database.py  init_db.py  models.py
(+19 files in other folders)
