[tool.poetry]
name = "wealth"
version = "1.0.0"
description = ""
authors = ["Nandor Boics <nandor.borics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypdf = "^5.3.1"
openai = "^1.65.5"
datamodel-code-generator = "^0.28.2"
dotenv = "^0.9.9"
fastapi = "^0.115.11"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.38"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
